# Group2_GPU_CA_SS2020

./: .floo  .gitignore  CMakeLists.txt  CudaTestProject.sln  CudaTestProject.vcxproj  CudaTestProject.vcxproj.filters  README.md  TODO_REMOVE_THIS_FILE_tutorial.txt  test.cpp
CudaTestProject/: CudaTestProject.vcxproj  kernel.cu
inc/: alg.cuh  common.cuh  graph.h  graph_generator.h  graph_io.h  sssp.h  sssp_gpu_search.h  sssp_pinned_memory.h  sssp_sequential.h  sssp_standard.h  sssp_thrust.h  sssp_zero_copy_memory.h  time_measurement.h
output/: graph-assignment.txt  graph.txt  path0.txt  path1.txt  path10.txt  path100.txt  path101.txt  path102.txt  path103.txt  path104.txt  path105.txt  path106.txt  path107.txt  path108.txt  path109.txt  path11.txt  path110.txt  path111.txt  path112.txt  path113.txt  path114.txt  path115.txt  path116.txt  path117.txt  path118.txt  path119.txt  path12.txt  path120.txt  path121.txt  path122.txt  path123.txt  path124.txt  path125.txt  path126.txt  path127.txt  path128.txt  path129.txt  path13.txt  path130.txt  path131.txt  (+162 more)
src/: CMakeLists.txt  CudaTestProject.vcxproj  alg.cu  graph.cpp  graph.cu  graph.h  graph_generator.h  graph_io.h  main.cu  sssp.h  sssp_gpu_search.cu  sssp_pinned_memory.cpp  sssp_pinned_memory.cu  sssp_pinned_memory.h  sssp_sequential.cpp  sssp_sequential.cu  sssp_sequential.h  sssp_standard.cpp  sssp_standard.cu  sssp_standard.h  sssp_thrust.cpp  sssp_thrust.cu  sssp_thrust.h  sssp_zero_copy_memory.cpp  sssp_zero_copy_memory.cu  sssp_zero_copy_memory.h  test.h
test/: catch.hpp  test_alg.cuh  test_graph.hpp  test_sssp.hpp  tests.cpp
test/res/: graph_small_normal.txt
